# back

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  chatbot-1.json  config.py  docker-compose.yml  entrypoint.sh  execution-1.json  graph_tool.py  main.py  readme.md  requirements-dev.txt  requirements.txt  tasks.py  worker.py
adapters/: base.py  inbound.py  registry.py  telegram.py  viber.py  vk.py  whatsapp.py
administration-backend/: .coverage  .env  Dockerfile  pyproject.toml  pytest.ini
administration-backend/backend/: main.py
administration-backend/backend/api/: __init__.py  auth.py  chatbot.py  execution.py  subgraph.py
administration-backend/backend/config/: config.json  config.py
administration-backend/backend/db/: chatbot_request.py  exec_request.py  subgraph_request.py  user_request.py
administration-backend/backend/dto/: chatbot.py  execution.py  redis_io_streams.py
administration-backend/backend/entities/: ChatBot.py  User.py  execution.py
administration-backend/backend/minio_controller/: S3Client.py
administration-backend/backend/models/: __init__.py  chatbot.py  execution_state.py  message.py  nodes.py
administration-backend/backend/utils/: graph_logic.py  minio.py
administration-backend/tests/: conftest.py  test_api_auth.py  test_api_chatbot.py  test_chatbot_api.py  test_db_requests.py  test_middleware.py  test_password.py  test_s3client.py  test_subgraph_api.py  test_subgraph_versioning.py  test_token_utils.py
adminstration-backend/: .env  pyproject.toml
api/: account.py  analytics.py  auth.py  bots.py  data.py  deps.py  dlq.py  flows.py  integrations.py  projects.py  ratelimit.py  secrets.py  sessions.py  webhooks.py
bot-engine/: .env  .gitignore  Readme.md  pyproject.toml
bot-engine/examples/: simple_bot.json
bot-engine/scripts/: run_bot.py  setup_test_enviroment.py  test_full.py  test_send_message.py
bot-engine/src/bot_engine/: __init__.py  engine.py  models.py
bot-engine/src/bot_engine/processors/: __init__.py  base.py
bot-engine/src/bot_engine/processors/control/: __init__.py  condition.py  loop.py  switch.py
bot-engine/src/bot_engine/processors/data/: __init__.py  answer.py  set_var.py
bot-engine/src/bot_engine/processors/dialogue/: __init__.py  choice.py  prompt.py
bot-engine/src/bot_engine/processors/flow/: __init__.py  command.py  exit.py  start.py  subflow.py  wait.py
bot-engine/src/bot_engine/processors/script/: __init__.py  script.py
db/: base.py  models.py
db-service/: .coverage  .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  pytest.ini
db-service/alembic/: env.py
db-service/alembic/versions/: 5f6d9c8e7a12_add_chatbot_versions.py  6284831f4bd7_initial_migration.py  7a3b2c1e9f04_add_subgraph_versions.py  913409301c1b_ini.py  aedac4dc922d_initial_migration.py  b3b0e50b4b6d_initial_migration.py
db-service/db_service/: Readme.md  main.py
db-service/db_service/api/: chatbot.py  execution.py  graph.py  subgraph.py  user.py
db-service/db_service/db/: orm_models.py  session.py
db-service/db_service/db/crud/: chatbot.py  execution.py  graph.py  subgraph.py  user.py
db-service/db_service/db/schemas/: chatbot.py  graph.py  user.py
db-service/db_service/scripts/: whitelist_user.py
db-service/src/db/: orm_models.py
db-service/tests/: conftest.py  test_chatbot_crud.py  test_user_crud.py
engine/: __init__.py  loader.py  registry.py  resolver.py  runner.py  sandbox.py  validation.py
examples/: README.md  run_local.py  run_telegram.py
execution-engine/: .coverage  Dockerfile  pyproject.toml  pytest.ini
execution-engine/services/py_runner/: Dockerfile  requirements.txt  runner.py
execution-engine/src/: main.py
execution-engine/src/config/: config.json  config.py
execution-engine/src/engine/: engine.py  engine_factory.py
execution-engine/src/engine/nodes/: ConditionNodeExecutor.py  FailExecutor.py  FileAnswerExecutor.py  ScriptNodeExecutor.py  SendMessageExecutor.py  SetMessageExecutor.py  SetVariableExecutor.py  SubgraphCallExecutor.py  SubgraphExitExecutor.py  TextAnswerExecutor.py  WaitExecutor.py  __init__.py
execution-engine/src/minio_controller/: S3Client.py
execution-engine/src/models/: chatbot.py  execution_state.py  nodes.py
execution-engine/src/redis_controller/: DEV_NOTES.md  redis_loop.py
execution-engine/src/sandbox_runner/: client.py  schemas.py
execution-engine/tests/: conftest.py  test_config.py  test_engine.py  test_engine_subgraph.py  test_node_executors.py  test_pyrunner_client.py  test_redis.py  test_s3client.py
handlers/: agent.py  ai.py  calendar.py  code.py  crm.py  cron_trigger.py  database.py  end.py  handoff.py  http_call.py  intent.py  loop.py  message_trigger.py  notify.py  payment.py  send_message.py  sheets.py  slot_fill.py  sql.py  subgraph.py  transform.py  user_input.py  wait.py  webhook_trigger.py
integrations/: calendar.py  crm.py  payment.py  sheets.py
migrations/: env.py
minio-service/: .env
models/: __init__.py  flow.py  node.py  session.py
preview-execution/: .coverage  Dockerfile  pyproject.toml
services/: analytics.py  connections.py  cron_scheduler.py  flow_ai.py  google_auth.py  llm.py  logging_config.py  metrics.py  secrets.py  security.py
stores/: bot_store.py  data_store.py  dead_letter.py  flow_store.py  integration_store.py  project_store.py  secret_store.py  session_store.py  user_store.py
telegram-execution/: .coverage  pyproject.toml
telegram-execution/src/: main.py
telegram-execution/src/api/: telegram_api.py
telegram-execution/src/config/: config.json
telegram-execution/src/controller/: __init__.py  redis.py  redis_streams.py
telegram-execution/src/poller/: __init__.py  telegram_poller.py
telegram-execution/src/sender/: __init__.py  telegram_sender.py
telegram-execution/tests/: __init__.py  conftest.py  test_api.py  test_assigne_endpoint.py  test_controller_redis.py  test_controller_streams.py  test_poller.py  test_sender.py
tests/: conftest.py  test_adapters.py  test_analytics.py  test_api_flow_ai.py  test_api_flows.py  test_api_sessions.py  test_auth.py  (+24 more)
(+51 files in other folders)
