[project]
name = "adminstration-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"},
]
dependencies = ["fastapi>=0.120.0", "pyjwt>=2.10.1", "pwdlib[argon2]>=0.3.0", "pydantic>=2.12.3", "uvicorn>=0.38.0", "python-multipart>=0.0.20", "dotenv>=0.9.9", "httpx>=0.28.1", "minio>=7.2.20"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve.cmd = "uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload"
serve.env = {PYTHONPATH = "backend"}
test.cmd = "pytest tests/"
test.env = {PYTHONPATH = "backend"}

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
