[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-engine"
version = "0.1.0"
description = "Bot engine for processing messages from Redis with scenarios from MinIO"
authors = [
    {name = "Abramenko Vladimir", email = "vovadinamik8913@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "redis>=4.5.0",
    "minio>=7.1.0", 
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"  # ← убедитесь что эта строка есть
]


[project.scripts]
bot-engine = "bot_engine.engine:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot_engine*"]