[project]
name = "db-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"},
]
dependencies = ["sqlalchemy>=2.0.44", "alembic>=1.17.0", "dotenv>=0.9.9", "psycopg[binary]>=3.2.11", "uvicorn>=0.38.0", "pwdlib[argon2]>=0.3.0", "fastapi>=0.120.0", "pydantic[email]>=2.12.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]  
serve.cmd = "uvicorn db_service.main:app --host 0.0.0.0 --port 8000 --reload"
serve.env = {PYTHONPATH = "db_service"}
populate_whitelist.cmd = "python ./db_service/scripts/whitelist_user.py"
populate_whitelist.env = {PYTHONPATH = "db_service"}
makemig = "alembic revision --autogenerate -m \"{initial migration}\""
migrate = "alembic upgrade head"
