[project]
name = "execution-engine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"},
]
dependencies = ["redis>=7.0.1", "pydantic>=2.12.4", "dotenv>=0.9.9", "minio>=7.2.18", "httpx>=0.28.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve.cmd = "python src/main.py"
serve.env = {PYTHONPATH = "src"}
test.cmd = "pytest tests/"
test.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
